...
            )
            Column(
                modifier = Modifier.weight(1f),
                verticalArrangement = Arrangement.spacedBy(3.dp),
            ) {
                Text(
                    "Подписывайтесь на канал разработки!",
                    style = MaterialTheme.typography.titleMedium,
                    fontWeight = FontWeight.Bold,
                )
                Text(
                    "t.me/luxmusic_gdbs",
                    style = MaterialTheme.typography.bodyMedium,
...
